# sarpro

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE-2.0  LICENSE-MIT  README.md  ROADMAP.md  ROADMAP_explained.md
src/: error.rs  lib.rs  main.rs  types.rs
src/api/: mod.rs
src/cli/: args.rs  errors.rs  mod.rs  runner.rs
src/core/: mod.rs  params.rs
src/core/processing/: autoscale.rs  mod.rs  ops.rs  padding.rs  pipeline.rs  resize.rs  save.rs  synthetic_rgb.rs
src/gui/: app.rs  components.rs  logging.rs  mod.rs  models.rs  processing.rs
src/io/: gdal.rs  mod.rs  sentinel1.rs
src/io/writers/: jpeg.rs  metadata.rs  mod.rs  tiff.rs  worldfile.rs
