[package]
name = "sarpro"
version = "0.1.1"
edition = "2024"
description = "A high-performance Sentinel-1 Synthetic Aperture Radar (SAR) GRD product to image processor."
authors = ["Dan Vi <bogwi@rakumail.jp>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sarpro"       
homepage = "https://github.com/bogwi/sarpro"
repository = "https://github.com/bogwi/sarpro"
readme = "README.md"
keywords = ["sar", "radar", "sentinel-1", "geotiff", "remote-sensing"]
categories = ["science::geo", "multimedia::images", "command-line-utilities"]

[[bin]]
name = "sarproUI"
path = "src/bin/gui.rs"

[features]
default = ["gui"]
gui = ["eframe", "egui_extras", "rfd", "image", "sysinfo", "once_cell"]
full = ["gui"]

[dependencies]
# Core dependencies (always included)
ndarray = { version = "0.15", features = ["rayon"] }
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
fast_image_resize = { version = "5.2.1", features = ["rayon"] }
gdal = { version = "0.18.0", features = ["bindgen"] }
gdal-sys = { version = "0.11.0", features = ["bindgen"] }
jpeg-encoder = "0.6.1"
tiff = "0.10.0"
quick-xml = "0.27"
chrono = { version = "0.4", features = ["serde"] }

# GUI dependencies (only with gui feature)
eframe = { version = "0.32.0", optional = true }
egui_extras = { version = "0.32.0", features = ["image"], optional = true }
rfd = { version = "0.13.0", optional = true }
image = { version = "0.25.6", optional = true }
sysinfo = { version = "0.36.1", optional = true }
once_cell = { version = "1.18", optional = true }

[dev-dependencies]
